--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -7,8 +7,7 @@ Votre suggestion sera vérifiée avant publication.{% endblock %} {% block conte
     <h1 id="form-page-title">Proposer un site</h1>
     <p>
       Merci de contribuer à Réunion Wiki&nbsp;! Remplis le formulaire ci-dessous
-      pour nous suggérer un site fiable et utile pour les habitants de La
-      Réunion.
+      pour me suggérer un site fiable et utile pour les habitants de La Réunion.
     </p>
     <ul class="form-checklist">
       <li>
